--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,32 @@ jobs:
       - name: Install and Run Pre-commit
         uses: pre-commit/action@v2.0.3
 
+  create-envfile:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Make Django envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_DEBUG: false
+          envkey_USE_DOCKER: yes
+          envkey_DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          envkey_IPYTHONDIR: /app/.ipython
+          envkey_DJANGO_READ_DOT_ENV_FILE: true
+          file_name: .django
+          fail_on_empty: false
+
+      - name: Make Postgres envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_POSTGRES_HOST: postgres
+          envkey_POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+          envkey_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          envkey_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          envkey_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          file_name: .postgres
+          fail_on_empty: false
+
   # With no caching at all the entire ci process takes 4m 30s to complete!
   pytest:
     runs-on: ubuntu-latest
@@ -44,13 +70,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build the Stack
-        run:  docker-compose -f local.yml build
+        run:  docker-compose -f docker-compose.ci.yml build
 
       - name: Run DB Migrations
-        run:  docker-compose -f local.yml run --rm django python manage.py migrate
+        run:  docker-compose -f docker-compose.ci.yml run --rm django python manage.py migrate
 
       - name: Run Django Tests
-        run:  docker-compose -f local.yml run django pytest
+        run:  docker-compose -f docker-compose.ci.yml run django pytest
 
       - name: Tear down the Stack
-        run:  docker-compose -f local.yml down
+        run:  docker-compose -f docker-compose.ci.yml down
