--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -16,8 +16,8 @@ services:
     volumes:
       - .:/app:z
     env_file:
-      - .django
-      - .postgres
+      - $env_dir/.django
+      - $env_dir/.postgres
     ports:
       - "8000:8000"
     command: /start
@@ -32,7 +32,7 @@ services:
       - CI_postgres_data:/var/lib/postgresql/data:Z
       - CI_postgres_data_backups:/backups:z
     env_file:
-      - .postgres
+      - $env_dir/.postgres
 
   docs:
     image: timberframes_CI_docs
@@ -41,7 +41,7 @@ services:
       context: .
       dockerfile: ./compose/CI/docs/Dockerfile
     env_file:
-      - .django
+      - $env_dir/.django
     volumes:
       - ./docs:/docs:z
       - ./config:/app/config:z
