--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -41,7 +41,7 @@ services:
       context: .
       dockerfile: ./compose/CI/docs/Dockerfile
     env_file:
-      - $env_dir/.django
+      - ./.django
     volumes:
       - ./docs:/docs:z
       - ./config:/app/config:z
