--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -15,6 +15,8 @@ services:
       - postgres
     volumes:
       - .:/app:z
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     command: /start
@@ -28,6 +30,8 @@ services:
     volumes:
       - CI_postgres_data:/var/lib/postgresql/data:Z
       - CI_postgres_data_backups:/backups:z
+    env_file:
+      - .env
 
   docs:
     image: timberframes_CI_docs
