--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: "Check file existence"
         run: |
-          ls
+          pwd
           find -iname ".env"
 
       - name: Checkout Code Repository
