--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - .:/app:z
     env_file:
-      - .env
+      - ./.env
     ports:
       - "8000:8000"
     command: /start
@@ -31,7 +31,7 @@ services:
       - CI_postgres_data:/var/lib/postgresql/data:Z
       - CI_postgres_data_backups:/backups:z
     env_file:
-      - .env
+      - ./.env
 
   docs:
     image: timberframes_CI_docs
