Shaking and crying

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Checkout Code Repository
+        uses: actions/checkout@v3
+
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
         with:
@@ -57,11 +61,9 @@ jobs:
 
       - name: "Check file existence"
         run: |
-          pwd
+          echo "$GITHUB_CONTEXT"
+          ls -la
           find -iname ".env"
-
-      - name: Checkout Code Repository
-        uses: actions/checkout@v3
 
       - name: Build the Stack
         run:  docker-compose -f docker-compose.ci.yml build
