Adding config files back

--- a/.gitignore
+++ b/.gitignore
@@ -292,7 +292,9 @@ production*
 Procfile/
 production.yml
 local.yml
-config/
+config/settings/base.py
+config/settings/local.py
+config/settings/production.py
 compose/local
 compose/production
 locale/
